updated about me

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="container">
         <!-- About Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase ">
-          About
+          About Me
         </h2>
         <!-- Icon Divider-->
         <div class="divider-custom ">
@@ -110,14 +110,22 @@
         </div>
         <!-- About Section Content-->
         <div class="row">
-          <div class="col-lg-4 ms-auto">
+          <div class="col m-3">
             <p class="lead">
               I am a passionate software engineer with a love for solving
               challenging problems and a strong desire to continually grow and
-              improve myself.
+              improve myself. One of my favorite parts of being a software engineer is no longer having to say “I wish there was an app for that”. I can just create one!
             </p>
+            <p class="lead">I have always enjoyed problem solving and have been fascinated with all things tech/web, and how they worked. During the covid lockdowns I finally sat down and pursued these interest. After trying out some online web dev courses and building some basic html/css websites, I was hooked. The potential to be able to create basically anything I could imagine was so exciting to me and I wanted to learn more. I then decided to pursue this field as my career. After looking at many options I decided to attend App Academy. It was one of the best decisions of my life and I learned so much during my year in the course.
+            <p class="lead">I am currently proficient in JavaScript, React.js/Redux, and Python and I'm actively working on expanding beyond my current knowledge base and I am learning TypeScipt at the moment.
+            </p>
+            </p>
+            <p class="lead">
+              My background includes 8+ years in retail operations. I have been a part of, led, and managed many high performing teams. I am no stranger to fast-paced word environments, with high performance expectations. In fact I believe that is where I really thrive. Doing your very best at everything you commit to is a value of mine that I work to apply in all aspects of my life.
+            </p>
+            <p class="lead">Learning is a lifelong journey for me and I'm excited to continue to build applications and experiment with new technologies and languages.</p>
           </div>
-          <div class="col-lg-4 me-auto">
+          <!-- <div class="col-lg-4 me-auto">
             <p class="lead">
               Currently I am proficient in JavaScript, React.js / Redux, and
               Python and I'm actively working on expanding beyond my current
@@ -125,7 +133,7 @@
               engineer is no longer having to say “I wish there was an app for
               that”. I can just create one!
             </p>
-          </div>
+          </div> -->
         </div>
         <!-- About Section Button-->
         <div class="text-center mt-4">
@@ -146,7 +154,7 @@
         <h2
           class="page-section-heading text-center text-uppercase text-white mb-0"
         >
-          Portfolio
+          Projects
         </h2>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
@@ -329,41 +337,34 @@
                 <div class="col-lg-8">
                   <!-- Portfolio Modal - Title-->
                   <h2
-                    class="portfolio-modal-title text-secondary text-uppercase mb-0"
+                    class="portfolio-modal-title text-secondary text-uppercase mb-3"
                   >
                     KanDiscer
                   </h2>
-                  <!-- Icon Divider-->
-                  <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon">
-                      <i class="fa-solid fa-code"></i>
-                    </div>
-                    <div class="divider-custom-line"></div>
-                  </div>
+                  <p class="fst-italic">JavaScript | Python | React | Redux | Flask | SQLAlchemy | Mapbox | AWS</p>
                   <!-- Portfolio Modal - Image-->
                   <a href="https://kandiscer.onrender.com/" target="_blank">
                     <img
-                      class="img-fluid rounded mb-5"
+                      class="img-fluid rounded mb-3"
                       src="assets/img/gifs/kandiscer.gif"
                       alt="..."
                     />
                   </a>
                   <!-- Portfolio Modal - Text-->
-                  <h4 class="mb-4">
-                   KanDiscer is a web app built to help disc golfers improve their game!
-                  </h4>
                   <p><a href="https://kandiscer.onrender.com/" target="_blank">Live</a> | <a href="https://github.com/IanKaneshiro/KanDiscer" target="_blank">Github Repo</a></p>
-                 <ul>
-                  <li class="mb-1">Incorporated MapBox’s Javascript library to allow users to preview layouts of courses, as well as navigate courses using live GPS positioning, enhancing the overall user experience (UX).
-                  </li>
-                  <li class="mb-1">Utilized Recharts library to generate a visual representation of the flight path of each disc, empowering users to pinpoint areas for improvement in their bag design.
-                  </li>
-                  <li class="mb-1">Designed a filters menu leveraging SQLAlchemy’s filters, enabling users to effortlessly refine their search criteria by manufacturer and flight characteristics.
-                  </li>
-                  <li>Created a search bar using a debouncing technique to minimize unnecessary API calls, resulting in a smoother and more efficient UX.
-                  </li>
-                 </ul>
+                  <h5 class="mb-3 ">
+                   KanDiscer is a web app built to help disc golfers improve their game!
+                  </h5>
+                  <ul>
+                    <li class="mb-1">Incorporated MapBox’s Javascript library to allow users to preview layouts of courses, as well as navigate courses using live GPS positioning, enhancing the overall user experience (UX).
+                    </li>
+                    <li class="mb-1">Utilized Recharts library to generate a visual representation of the flight path of each disc, empowering users to pinpoint areas for improvement in their bag design.
+                    </li>
+                    <li class="mb-1">Designed a filters menu leveraging SQLAlchemy’s filters, enabling users to effortlessly refine their search criteria by manufacturer and flight characteristics.
+                    </li>
+                    <li>Created a search bar using a debouncing technique to minimize unnecessary API calls, resulting in a smoother and more efficient UX.
+                    </li>
+                  </ul>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
                     Close Window
@@ -399,31 +400,24 @@
                 <div class="col-lg-8">
                   <!-- Portfolio Modal - Title-->
                   <h2
-                    class="portfolio-modal-title text-secondary text-uppercase mb-0"
+                    class="portfolio-modal-title text-secondary text-uppercase mb-3"
                   >
                     Jeanak Eats
                   </h2>
-                  <!-- Icon Divider-->
-                  <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon">
-                      <i class="fa-solid fa-code"></i>
-                    </div>
-                    <div class="divider-custom-line"></div>
-                  </div>
+                  <p class="fst-italic">JavaScript | Python | React | Redux | Flask | SQLAlchemy | AWS</p>
                   <!-- Portfolio Modal - Image-->
                   <a href="https://jeanak-eats.onrender.com/" target="_blank">
                     <img
-                      class="img-fluid rounded mb-5"
+                      class="img-fluid rounded mb-3"
                       src="assets/img/gifs/jeanakeats.gif"
                       alt="..."
                     />
                   </a>
-                  <!-- Portfolio Modal - Text-->
-                  <h4 class="mb-4">
-                   Jeanak Eats is based off the popular web app Uber Eats.
-                  </h4>
                   <p><a href="https://jeanak-eats.onrender.com/">Live</a> | <a href="https://github.com/IanKaneshiro/Jeanak-Eats">Github Repo</a></p>
+                  <!-- Portfolio Modal - Text-->
+                  <h5 class="mb-4">
+                   Jeanak Eats is based off the popular web app Uber Eats.
+                  </h5>
                   <ul>
                     <li>Leveraged AWS S3 for the direct upload and retrieval of images, enhancing user experience and ensuring future scalability.</li>
                     <li>Designed and implemented a Flask and SQLAlchemy based RESTful API for efficient JSON data exchange.
