more update to bio

--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
               challenging problems and a strong desire to continually grow and
               improve myself. One of my favorite parts of being a software engineer is no longer having to say “I wish there was an app for that”. I can just create one!
             </p>
-            <p class="lead">I have always enjoyed problem solving and have been fascinated with all things tech/web, and how they worked. During the covid lockdowns I finally sat down and pursued these interest. After trying out some online web dev courses and building some basic html/css websites, I was hooked. The potential to be able to create basically anything I could imagine was so exciting to me and I wanted to learn more. I then decided to pursue this field as my career. After looking at many options I decided to attend App Academy. It was one of the best decisions of my life and I learned so much during my year in the course.
+            <p class="lead">I have always enjoyed problem solving and have been fascinated with all things tech/web, and how they worked. During the covid lockdowns I finally sat down and pursued these interest. After taking some online courses and building a couple basic html/css websites, I was hooked. The potential to be able to create basically anything I could imagine was so exciting to me and I wanted to learn more. I then decided to pursue this field as my career. After looking at many options I decided to attend App Academy. It was one of the best decisions of my life and I learned so much during my year in the course.
             <p class="lead">I am currently proficient in JavaScript, React.js/Redux, and Python and I'm actively working on expanding beyond my current knowledge base and I am learning TypeScipt at the moment.
             </p>
             </p>
             <p class="lead">
-              My background includes 8+ years in retail operations. I have been a part of, led, and managed many high performing teams. I am no stranger to fast-paced word environments, with high performance expectations. In fact I believe that is where I really thrive. Doing your very best at everything you commit to is a value of mine that I work to apply in all aspects of my life.
+              My background includes 8+ years in retail operations. I have been a part of, led, and managed many high performing teams. I am no stranger to fast-paced work environments, with high performance expectations. In fact I believe that is where I really thrive. Doing my best at everything I commit to is a value of mine that I work to apply in all aspects of my life.
             </p>
             <p class="lead">Learning is a lifelong journey for me and I'm excited to continue to build applications and experiment with new technologies and languages.</p>
           </div>
