--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               />
             </div>
           </div>
-          <!-- Portfolio Item 3
+          <!-- Portfolio Item 3 -->
           <div class="col-md-6 col-lg-4 mb-5">
             <div
               class="portfolio-item mx-auto"
@@ -235,7 +235,7 @@
                 alt="..."
               />
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </section>
